# metti

./: .dockerignore  .env.example  .env.local.example  .env.travis  .gitignore  .travis.yml  Dockerfile  README.md  alembic.ini  composer.json  docker-compose.yml  gunicorn.conf.py  middleware.ts  next.config.js  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  store.ts  uvicorn_config.py
alembic/: env.py
alembic/versions/: 20220805_230738_fc2ef1ebafc0_init.py
app/: Category.php  Destination.php  Item.php  Order.php  OrderCompletion.php  OrderItem.php  server.py  utils.py
app/Http/: Kernel.php
app/Providers/: RouteServiceProvider.php
app/controllers/: Items.py  Orders.py
app/models/: Category.py  Destination.py  Item.py  ItemOrder.py  Order.py
app/observers/: OrderObserver.py
config/: app.php  database.py
database/migrations/: 2019_05_05_085223_create_categories_table.php  2019_05_05_085223_create_destinations_table.php  2019_05_05_085230_create_categories_table.php  2019_05_05_085232_create_items_table.php  2019_05_05_085240_create_orders_table.php  (+2 more)
database/seeds/: DatabaseSeeder.php  (+1 more)
hooks/: useOrdersSync.ts
lib/: printer.ts
metti/: Dockerfile  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
middlewares/: persist-draft.ts
pages/: _app.tsx  index.tsx
prisma/: index.ts  schema.prisma  seed.ts
public/: mix-manifest.json
routes/: api.php  web.php
slices/: api.ts  index.ts  order.ts  orders.ts
styles/: generic.scss  index.scss  shared.scss
types/: types.ts
utils/: format.ts
(+91 files in other folders)
