[bdist_wheel]
universal = 0

[metadata]
name = metti
version = attr: metti.VERSION
description = Spaghettisfest food server
author = Thierry Morroni-Degeling
author_email = t@io.lu
url = https://github.com/eppelduerferjugend/metti
classifiers =
    Framework :: Falcon
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    colored ~= 1.4
    falcon ~= 3.1
    imap-tools ~= 0.55
    gunicorn ~= 20.1
    masonite-orm ~= 2.14
    psycopg2 ~= 2.9
    pytz
    pyyaml ~= 6.0
    requests ~= 2.27


[options.extras_require]
dev =
    pylint
    mypy
    flake8
test =
    pytest
    coverage

