[bdist_wheel]
universal = 0

[metadata]
name = metti
version = attr: metti.VERSION
description = Spaghettisfest food server
author = Thierry Morroni-Degeling
author_email = t@io.lu
url = https://github.com/eppelduerferjugend/metti
classifiers =
  Framework :: Falcon
  Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
  alembic ~= 1.8
  colored ~= 1.4
  fastapi ~= 0.79
  psycopg2-binary ~= 2.9
  pydantic ~= 1.9
  PyYAML ~= 6.0
  sqlalchemy ~= 1.4
  uvicorn ~= 0.18

[options.extras_require]
dev =
  pylint
  mypy
  flake8
test =
  pytest
  coverage

